--- a/index.html
+++ b/index.html
@@ -1,212 +1,104 @@
-<!doctype html>
-<html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>مرحبا بك في موقع فرملية</title>
-<link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;700;800&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>فرملية شاوية 🔥</title>
 <style>
-  :root{
-    --bg:#081223; --glass:rgba(255,255,255,0.04);
-    --accent1:#f0c75e; --accent2:#d9a441; --muted:#98b0b6;
+  body {
+    font-family: "Cairo", sans-serif;
+    background: linear-gradient(180deg, #111, #222);
+    color: #fff;
+    text-align: center;
+    margin: 0;
+    padding: 0;
   }
-  *{box-sizing:border-box}
-  body{margin:0;font-family:"Almarai",sans-serif;background:linear-gradient(180deg,#071028 0%, #0b1b2b 100%);color:#eef6f5}
-  .wrap{max-width:980px;margin:28px auto;padding:18px}
-  header{display:flex;align-items:center;justify-content:space-between;gap:12px}
-  .brand{display:flex;align-items:center;gap:12px}
-  .logo{width:72px;height:72px;border-radius:14px;background:linear-gradient(90deg,var(--accent1),var(--accent2));display:flex;align-items:center;justify-content:center;color:#071018;font-weight:900}
-  h1{margin:0;font-size:20px}
-  .subtitle{color:var(--muted);font-size:13px}
 
-  .card{background:var(--glass);padding:18px;border-radius:14px;margin-top:18px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 8px 30px rgba(0,0,0,0.6)}
-  .center{display:flex;flex-direction:column;align-items:center;gap:12px;text-align:center}
-  img.logo-img{max-width:220px;border-radius:12px;box-shadow:0 12px 40px rgba(0,0,0,0.6)}
-  .cta{padding:12px 18px;border-radius:12px;background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#071018;font-weight:800;border:none;cursor:pointer;font-size:16px}
-  .muted{color:var(--muted);font-size:14px}
-  .small{font-size:13px;color:#cfe6df}
+  h1 {
+    margin-top: 40px;
+    font-size: 28px;
+    color: #f4b400;
+    text-shadow: 0 0 10px #f4b400;
+  }
 
-  /* Modal */
-  .modal-backdrop{position:fixed;inset:0;background:rgba(3,6,10,0.7);display:none;align-items:center;justify-content:center;z-index:9999}
-  .modal{width:min(520px,94%);background:#06111a;border-radius:12px;padding:18px;border:1px solid rgba(255,255,255,0.04)}
-  .social-grid{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:12px}
-  .social-btn{flex:1;min-width:140px;padding:10px;border-radius:10px;border:0;cursor:pointer;font-weight:700}
-  .google{background:#fff;color:#0b1b2b}
-  .facebook{background:#1877f2;color:#fff}
-  .tiktok{background:linear-gradient(90deg,#25f4ee,#25f4ee 30%, #ff0050); color:#071018}
-  .close-btn{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:8px 10px;border-radius:8px;cursor:pointer}
+  img {
+    margin-top: 20px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    box-shadow: 0 0 15px #f4b400;
+  }
 
-  /* form styles */
-  .form-box{display:flex;flex-direction:column;gap:8px}
-  input[type="text"]{padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:rgba(255,255,255,0.02);color:inherit}
-  .send-btn{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#071018;padding:10px;border-radius:10px;border:0;cursor:pointer;font-weight:800}
+  .btn {
+    display: block;
+    width: 80%;
+    max-width: 300px;
+    margin: 20px auto;
+    padding: 12px;
+    border: none;
+    border-radius: 10px;
+    background-color: #f4b400;
+    color: #000;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+  }
 
-  footer{margin-top:20px;text-align:center;color:var(--muted);font-size:13px}
-  @media(max-width:520px){ .social-grid{flex-direction:column} .logo-img{max-width:160px} }
+  .btn:hover {
+    background-color: #fff;
+    color: #000;
+  }
+
+  #loginBox {
+    display: none;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    border-radius: 15px;
+    width: 90%;
+    max-width: 350px;
+    margin: 20px auto;
+  }
+
+  .social-btn {
+    display: block;
+    background: #333;
+    color: white;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 16px;
+    width: 90%;
+    max-width: 300px;
+    transition: 0.3s;
+  }
+
+  .social-btn:hover {
+    background: #f4b400;
+    color: #000;
+  }
 </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="brand">
-        <div class="logo">UC</div>
-        <div>
-          <h1>مرحبا بك في موقع فرملية</h1>
-          <div class="subtitle">تجربة احترافية، آمنة وجذابة</div>
-        </div>
-      </div>
-      <div class="muted">نسخة تجريبية</div>
-    </header>
+  <h1>👋 مرحبا بك في موقع فرملية شاوية 🔥</h1>
+  <img src="logo.png" alt="شعار الموقع">
 
-    <div class="card center">
-      <!-- image: ضع ملف logo.png في نفس مجلد index.html -->
-      <img src="logo.png" alt="Logo" class="logo-img" onerror="this.style.display='none'">
-      <div class="small">إذا لم تظهر الصورة تأكد أنك نقلت ملف <strong>logo.png</strong> إلى مجلد المشروع</div>
+  <button class="btn" id="watchBtn">🎥 للمشاهدة البث المباشر قم بتسجيل الدخول</button>
+  <button class="btn" id="loginBtn">تسجيل دخول</button>
 
-      <p class="muted" style="max-width:720px">لمشاهدة البث المباشر اضغط على الزر</p>
-      <button class="cta" id="liveBtn">مشاهدة البث المباشر</button>
-    </div>
-
-    <div class="card" style="margin-top:16px">
-      <h3 style="margin:0 0 8px 0">معلومات سريعة</h3>
-      <p class="muted">هذه الصفحة تعرض خيارات متابعة آمنة. لن نجمع كلمات سر أو نحاكي صفحات خدمات أخرى.</p>
-    </div>
-
-    <footer>© Farmliya</footer>
+  <div id="loginBox">
+    <p>المتابعة باستخدام:</p>
+    <button class="social-btn">📘 فيسبوك</button>
+    <button class="social-btn">🔴 جوجل</button>
+    <button class="social-btn">🎵 تيك توك</button>
+    <button class="social-btn">💬 ديسكورد</button>
   </div>
 
-  <!-- Modal -->
-  <div class="modal-backdrop" id="modal">
-    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-      <h3 id="modalTitle">للمتابعة تابع بــ:</h3>
-      <p class="muted">اختر طريقة المتابعة الرسمية أو استخدم خيار "نسخة تجريبية"</p>
-
-      <div class="social-grid">
-        <!-- Google OAuth (redirect) -->
-        <button class="social-btn google" id="btnGoogle">متابعة بـ Google</button>
-
-        <!-- Facebook OAuth (redirect) -->
-        <button class="social-btn facebook" id="btnFacebook">متابعة بـ Facebook</button>
-
-        <!-- TikTok (مثال / رابط خارجي أو OAuth) -->
-        <button class="social-btn tiktok" id="btnTikTok">متابعة بـ TikTok</button>
-      </div>
-
-      <hr style="margin:12px 0;border:none;border-top:1px solid rgba(255,255,255,0.03)">
-
-      <div style="display:flex;gap:8px;align-items:center;justify-content:center">
-        <button class="close-btn" id="openDemo">نسخة تجريبية (آمنة)</button>
-        <button class="close-btn" id="closeModal">إغلاق</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Demo login modal (آمن، يرسل بيانات غير حساسة إلى backend) -->
-  <div class="modal-backdrop" id="demoModal" style="display:none">
-    <div class="modal">
-      <h3>نسخة تجريبية — متابعة آمنة</h3>
-      <p class="muted">أدخل اسم العرض (Display name) أو رسالة قصيرة فقط. لا تدخل كلمات مرور.</p>
-      <div class="form-box">
-        <input id="demoName" type="text" placeholder="اسم العرض (مثلاً: Ali123)">
-        <textarea id="demoMsg" rows="3" placeholder="رسالة قصيرة (اختياري)"></textarea>
-        <div style="display:flex;gap:8px;justify-content:center">
-          <button class="send-btn" id="sendDemo">إرسال (آمن)</button>
-          <button class="close-btn" id="closeDemo">إلغاء</button>
-        </div>
-        <div id="demoStatus" class="muted" style="margin-top:8px"></div>
-      </div>
-    </div>
-  </div>
-
-<script>
-/* ========== إعدادات OAuth آمنة (ضع القيم على الخادم أو في مكان آمن)
-   ملف الواجهة سيستخدم الروابط التالية لإعادة توجيه المستخدم إلى مزود الخدمة
-   - لو أردت OAuth فعلي: أنشئ App على Google/Facebook/TikTok واحصل على CLIENT_ID وREDIRECT_URI.
-   - هنا نضع الأمثلة كمكان لوضع القيم (لا تضع الأسرار في client إذا كنت تريد أمانًا).
-*/
-const OAUTH = {
-  google: {
-    client_id: "PUT_GOOGLE_CLIENT_ID",           // ضع client id هنا لو أردت
-    redirect_uri: "https://your-site.com/oauth-cb", // ضع redirect URI مسجل في console
-    scope: "openid%20email%20profile"
-  },
-  facebook: {
-    client_id: "PUT_FACEBOOK_CLIENT_ID",
-    redirect_uri: "https://your-site.com/oauth-cb",
-    scope: "email public_profile"
-  },
-  tiktok: {
-    client_id: "PUT_TIKTOK_CLIENT_ID",
-    redirect_uri: "https://your-site.com/oauth-cb",
-    scope: "user.info.basic"
-  }
-};
-
-/* Helper لفتح OAuth (إذا تركت القيم الافتراضية سيظهر تحذير) */
-function startOAuth(provider){
-  const cfg = OAUTH[provider];
-  if(!cfg || !cfg.client_id || cfg.client_id.includes('PUT_')){
-    alert("لم يتم إعداد CLIENT_ID لمزود " + provider + ". يمكنك استخدام النسخة التجريبية الآمنة بدلاً من ذلك.");
-    return;
-  }
-  if(provider === 'google'){
-    const url = `https://accounts.google.com/o/oauth2/v2/auth?client_id=${cfg.client_id}&redirect_uri=${encodeURIComponent(cfg.redirect_uri)}&response_type=code&scope=${cfg.scope}&access_type=online`;
-    window.location.href = url;
-  } else if(provider === 'facebook'){
-    const url = `https://www.facebook.com/v16.0/dialog/oauth?client_id=${cfg.client_id}&redirect_uri=${encodeURIComponent(cfg.redirect_uri)}&scope=${encodeURIComponent(cfg.scope)}&response_type=code`;
-    window.location.href = url;
-  } else if(provider === 'tiktok'){
-    const url = `https://open.tiktokapis.com/platform/oauth/connect?client_key=${cfg.client_id}&scope=${encodeURIComponent(cfg.scope)}&response_type=code&redirect_uri=${encodeURIComponent(cfg.redirect_uri)}`;
-    window.location.href = url;
-  }
-}
-
-/* Modal controls */
-const modal = document.getElementById('modal');
-const demoModal = document.getElementById('demoModal');
-document.getElementById('liveBtn').addEventListener('click', ()=> modal.style.display='flex');
-document.getElementById('closeModal').addEventListener('click', ()=> modal.style.display='none');
-
-document.getElementById('btnGoogle').addEventListener('click', ()=> startOAuth('google'));
-document.getElementById('btnFacebook').addEventListener('click', ()=> startOAuth('facebook'));
-document.getElementById('btnTikTok').addEventListener('click', ()=> startOAuth('tiktok'));
-
-/* Demo modal */
-document.getElementById('openDemo').addEventListener('click', ()=>{ modal.style.display='none'; demoModal.style.display='flex'; });
-document.getElementById('closeDemo').addEventListener('click', ()=>{ demoModal.style.display='none'; });
-
-/* Demo send: إرسال بيانات غير حساسة إلى backend آمن
-   مهم: لا تضع توكن التليغرام في هذا الملف — هنا ندعو endpoint آمن: POST /api/send-telegram
-   الخلفية (server) ستقرأ TELEGRAM_BOT_TOKEN من env وتعيد النتيجة.
-*/
-document.getElementById('sendDemo').addEventListener('click', async ()=>{
-  const name = document.getElementById('demoName').value.trim();
-  const msg = document.getElementById('demoMsg').value.trim();
-  const status = document.getElementById('demoStatus');
-  if(!name){ status.textContent = "الرجاء إدخال اسم العرض."; return; }
-  status.textContent = "جارٍ الإرسال...";
-  try{
-    // استبدل /api/send-telegram بعنوان خادمك إن لزم
-    const resp = await fetch('/api/send-telegram', {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({ type: 'demo_follow', name, msg })
+  <script>
+    document.getElementById("loginBtn").addEventListener("click", function() {
+      const box = document.getElementById("loginBox");
+      box.style.display = (box.style.display === "none" || box.style.display === "") ? "block" : "none";
     });
-    const j = await resp.json();
-    if(resp.ok && j.ok){ status.textContent = "✅ تم الإرسال بنجاح (آمن)."; document.getElementById('demoName').value=''; document.getElementById('demoMsg').value=''; }
-    else status.textContent = "❌ فشل الإرسال: " + (j.error || 'خطأ بالخادم');
-  }catch(e){
-    console.error(e);
-    status.textContent = "فشل الاتصال بالخادم. تأكد من تشغيل backend أو استخدم نسخة تجريبية محلياً.";
-  }
-});
-
-/* close modal on backdrop click */
-document.querySelectorAll('.modal-backdrop').forEach(b => {
-  b.addEventListener('click', (ev)=>{
-    if(ev.target === b){ b.style.display='none'; }
-  });
-});
-</script>
+  </script>
 </body>
 </html>
