--- a/index.html
+++ b/index.html
@@ -1,104 +1,286 @@
-<!DOCTYPE html>
-<html lang="ar">
+<!doctype html>
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>فرملية شاوية 🔥</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>فرملية شاوية — مرحبا بك 🔥</title>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
-  body {
-    font-family: "Cairo", sans-serif;
-    background: linear-gradient(180deg, #111, #222);
-    color: #fff;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+  :root{
+    --bg1:#05060a;
+    --bg2:#0f1724;
+    --glass: rgba(255,255,255,0.04);
+    --accent1: #f6c85f;
+    --accent2: #d49b2a;
+    --muted: #9fb0b7;
+    --radius: 14px;
+    --shadow: 0 8px 30px rgba(2,6,23,0.65);
+    --glass-border: rgba(255,255,255,0.06);
   }
+  *{box-sizing:border-box}
+  html,body{height:100%;margin:0;font-family:'Cairo',sans-serif;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:#eaf6f2;-webkit-font-smoothing:antialiased}
+  /* Animated gradient background shapes */
+  .bg-shapes{
+    position:fixed;inset:0;z-index:-2;overflow:hidden;
+    background: radial-gradient(600px 400px at 10% 20%, rgba(244,200,84,0.06), transparent 8%),
+                radial-gradient(500px 350px at 90% 80%, rgba(212,155,42,0.05), transparent 10%);
+    backdrop-filter: blur(6px);
+  }
+  .float-orb{
+    position:absolute;border-radius:50%;
+    filter: blur(40px); opacity:0.8;
+    animation: float 12s ease-in-out infinite;
+    mix-blend-mode: screen;
+  }
+  .orb1{width:520px;height:520px;left:-120px;top:-80px;background:linear-gradient(90deg,#f6c85f,#d49b2a);animation-duration:18s}
+  .orb2{width:360px;height:360px;right:-80px;bottom:-100px;background:linear-gradient(90deg,#74c0fc,#6a5df5);animation-duration:20s;opacity:0.12}
+  @keyframes float{0%{transform:translateY(0) rotate(0)}50%{transform:translateY(-30px) rotate(12deg)}100%{transform:translateY(0) rotate(0)}}
 
-  h1 {
-    margin-top: 40px;
-    font-size: 28px;
-    color: #f4b400;
-    text-shadow: 0 0 10px #f4b400;
-  }
+  /* Container */
+  .wrap{max-width:1100px;margin:32px auto;padding:28px;display:flex;gap:28px;align-items:center;justify-content:space-between}
+  @media(max-width:900px){ .wrap{flex-direction:column;padding:20px} }
 
-  img {
-    margin-top: 20px;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    box-shadow: 0 0 15px #f4b400;
+  /* Left hero */
+  .hero{
+    flex:1; min-width:280px;
+    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+    border-radius:var(--radius); padding:32px; box-shadow:var(--shadow); border:1px solid var(--glass-border);
+    position:relative; overflow:hidden;
   }
+  .badge{
+    display:inline-flex;align-items:center;gap:10px;padding:6px 12px;border-radius:999px;background:rgba(0,0,0,0.25);color:var(--accent1);font-weight:700;font-size:13px;border:1px solid rgba(255,255,255,0.03)
+  }
+  h1{font-size:28px;margin:18px 0 8px;line-height:1.05}
+  p.lead{color:var(--muted);margin:6px 0 18px;font-size:15px}
 
-  .btn {
-    display: block;
-    width: 80%;
-    max-width: 300px;
-    margin: 20px auto;
-    padding: 12px;
-    border: none;
-    border-radius: 10px;
-    background-color: #f4b400;
-    color: #000;
-    font-size: 18px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: 0.3s;
+  /* logo */
+  .logo-wrap{display:flex;align-items:center;gap:16px}
+  .logo-img{
+    width:120px;height:120px;border-radius:20px;flex-shrink:0;overflow:hidden;background:linear-gradient(90deg,var(--accent1),var(--accent2));display:flex;align-items:center;justify-content:center;box-shadow:0 18px 50px rgba(212,155,42,0.08);
+    border:1px solid rgba(255,255,255,0.04);
   }
+  .logo-img img{width:100%;height:100%;object-fit:cover;display:block}
 
-  .btn:hover {
-    background-color: #fff;
-    color: #000;
+  /* Actions */
+  .actions{display:flex;gap:12px;margin-top:18px;flex-wrap:wrap}
+  .btn{
+    padding:12px 18px;border-radius:12px;font-weight:800;border:0;cursor:pointer;font-size:15px;
+    transition:transform .18s ease,box-shadow .18s;
+    box-shadow: 0 8px 30px rgba(2,6,23,0.45);
   }
+  .btn:active{transform:translateY(2px)}
+  .btn-cta{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#071018}
+  .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
 
-  #loginBox {
-    display: none;
-    background: rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    border-radius: 15px;
-    width: 90%;
-    max-width: 350px;
-    margin: 20px auto;
-  }
+  .subtitle{font-size:13px;color:var(--muted);margin-top:8px}
 
-  .social-btn {
-    display: block;
-    background: #333;
-    color: white;
-    margin: 10px auto;
-    padding: 10px;
-    border-radius: 8px;
-    font-size: 16px;
-    width: 90%;
-    max-width: 300px;
-    transition: 0.3s;
+  /* Right column - small card */
+  .side{
+    width:360px;min-width:260px;
   }
+  .card{
+    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+    border-radius:14px;padding:18px;border:1px solid var(--glass-border);box-shadow:var(--shadow)
+  }
+  .social-grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:12px}
+  .social{
+    display:flex;align-items:center;gap:10px;padding:10px;border-radius:10px;background:rgba(255,255,255,0.02);cursor:pointer;border:1px solid rgba(255,255,255,0.03)
+  }
+  .social svg{width:20px;height:20px;flex-shrink:0}
+  .muted-small{color:var(--muted);font-size:13px}
 
-  .social-btn:hover {
-    background: #f4b400;
-    color: #000;
+  /* modal */
+  .modal-backdrop{
+    position:fixed;inset:0;background:rgba(3,6,12,0.6);display:none;align-items:center;justify-content:center;z-index:60;
   }
+  .modal{
+    width:min(520px,94%);border-radius:12px;padding:18px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid var(--glass-border);box-shadow:0 20px 60px rgba(2,6,23,0.8);
+  }
+  .modal h3{margin:0 0 8px}
+  .close-btn{background:transparent;border:0;color:var(--muted);font-weight:800;cursor:pointer}
+
+  /* tiny details */
+  .hint{font-size:13px;color:var(--muted);margin-top:10px}
+  a.small-link{color:var(--muted);text-decoration:underline;font-size:13px}
+
+  /* focus outlines for accessibility */
+  .btn:focus, .social:focus, .close-btn:focus { outline:3px solid rgba(246,200,95,0.14); outline-offset:3px; border-radius:10px; }
+
 </style>
 </head>
 <body>
-  <h1>👋 مرحبا بك في موقع فرملية شاوية 🔥</h1>
-  <img src="logo.png" alt="شعار الموقع">
 
-  <button class="btn" id="watchBtn">🎥 للمشاهدة البث المباشر قم بتسجيل الدخول</button>
-  <button class="btn" id="loginBtn">تسجيل دخول</button>
-
-  <div id="loginBox">
-    <p>المتابعة باستخدام:</p>
-    <button class="social-btn">📘 فيسبوك</button>
-    <button class="social-btn">🔴 جوجل</button>
-    <button class="social-btn">🎵 تيك توك</button>
-    <button class="social-btn">💬 ديسكورد</button>
+  <div class="bg-shapes" aria-hidden="true">
+    <div class="float-orb orb1"></div>
+    <div class="float-orb orb2"></div>
   </div>
 
-  <script>
-    document.getElementById("loginBtn").addEventListener("click", function() {
-      const box = document.getElementById("loginBox");
-      box.style.display = (box.style.display === "none" || box.style.display === "") ? "block" : "none";
+  <div class="wrap" role="main">
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="badge" aria-hidden="true">مرحبا بك</div>
+      <div style="display:flex;align-items:center;gap:16px;margin-top:12px">
+        <div class="logo-wrap">
+          <div class="logo-img" id="logoContainer">
+            <!-- Logo image: put logo.png in same folder -->
+            <img src="logo.png" alt="شعار فرملية" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=&#39;http://www.w3.org/2000/svg&#39; viewBox=&#39;0 0 300 300&#39;><rect width=&#39;100%&#39; height=&#39;100%&#39; fill=&#39;%23d49b2a&#39; rx=&#39;30&#39;/><text x=&#39;50%&#39; y=&#39;55%&#39; font-family=&#39;Arial&#39; font-size=&#39;64&#39; fill=&#39;%23071018&#39; text-anchor=&#39;middle&#39;>UC</text></svg>'">
+          </div>
+          <div>
+            <h1 id="hero-title">مرحبا بك في موقع فرملية شاوية 🔥</h1>
+            <p class="lead">تجربة احترافية، بث مباشر، وتواصل اجتماعي بسهولة — كل شيء هنا.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="actions" role="region" aria-label="أزرار العمل">
+        <button class="btn btn-cta" id="watchBtn" aria-controls="loginModal">🎥 للمشاهدة البث المباشر — قم بتسجيل الدخول</button>
+        <button class="btn btn-ghost" id="loginBtn" aria-controls="loginModal">🔐 تسجيل دخول</button>
+      </div>
+
+      <p class="subtitle">اشترك لتصلك إشعارات البث ودخول الحلقات الخاصة.</p>
+    </section>
+
+    <aside class="side">
+      <div class="card" role="complementary" aria-labelledby="side-title">
+        <h4 id="side-title" style="margin:0 0 8px 0">تابعنا على</h4>
+        <p class="muted-small">اختر الشبكة الاجتماعية للمتابعة السريعة:</p>
+
+        <div class="social-grid" role="list">
+          <button class="social" id="fbBtn" aria-label="متابعة فيسبوك">
+            <!-- Facebook SVG -->
+            <svg viewBox="0 0 24 24" fill="currentColor" style="color:#3b5998"><path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07C2 17.11 5.66 21.21 10.44 22v-7.02H7.9v-2.9h2.54V9.41c0-2.5 1.49-3.88 3.76-3.88 1.09 0 2.23.2 2.23.2v2.46h-1.25c-1.23 0-1.61.77-1.61 1.56v1.88h2.74l-.44 2.9h-2.3V22C18.34 21.21 22 17.11 22 12.07z"/></svg>
+            <span style="flex:1;text-align:right">فيسبوك</span>
+          </button>
+
+          <button class="social" id="googleBtn" aria-label="متابعة قوقل">
+            <!-- Google SVG -->
+            <svg viewBox="0 0 24 24" fill="currentColor" style="color:#db4437"><path d="M21.35 11.1h-9.2v2.84h5.27c-.23 1.42-1.29 3.08-4.03 3.08-2.42 0-4.4-1.99-4.4-4.44s1.98-4.44 4.4-4.44c1.38 0 2.3.59 2.83 1.1l1.93-1.86C16.88 5.2 15.2 4.3 13 4.3 8.74 4.3 5.3 7.74 5.3 12s3.44 7.7 7.7 7.7c4.43 0 7.35-3.1 7.35-7.6 0-.5-.05-.9-.1-1.2z"/></svg>
+            <span style="flex:1;text-align:right">قوقل</span>
+          </button>
+
+          <button class="social" id="tiktokBtn" aria-label="متابعة تيك توك">
+            <!-- TikTok simplified icon (monochrome) -->
+            <svg viewBox="0 0 24 24" fill="currentColor" style="color:#00d2ff"><path d="M12 2v12.02A4.98 4.98 0 1017 9.5V11a6 6 0 11-5-9z"/></svg>
+            <span style="flex:1;text-align:right">تيك توك</span>
+          </button>
+
+          <button class="social" id="discordBtn" aria-label="متابعة ديسكورد">
+            <!-- Discord SVG -->
+            <svg viewBox="0 0 71 55" style="width:20px;height:20px;fill:currentColor;color:#5865f2"><path d="M60.1 4.5A58.6 58.6 0 0046.6 0l-3.9 7.9a47.8 47.8 0 014.1.2c-1.6.8-3.5 1.6-5.5 2.2-5.7 2.1-11.2 3.1-16.2 3.6-2.6.2-5.2.3-7.9.3-.3 0-.7 0-1 0C13.6 14.4 7.3 12.9 3 11.2 3 11.2 3 11.2 2.7 10.9A49.9 49.9 0 00.1 14.8c3.9 3.1 8.6 6.1 14.2 8.9 6.7 3.4 13.7 5.4 20.9 6.2-.1.2-.2.3-.2.6-.6 3 .4 6.7.6 7.8 0 .1.1.3.3.3 1 0 2.2-.2 3.5-.6 3.2-1 6.8-2.6 10.9-5.1 2.1-1.2 4.1-2.6 6-4.1 0 0 3.9-6.6 3.9-13.1 0-6.7-3.7-10.5-3.7-10.5z"/></svg>
+            <span style="flex:1;text-align:right">ديسكورد</span>
+          </button>
+        </div>
+
+        <p class="hint">أو اضغط <a class="small-link" href="#" id="openLogin">تسجيل دخول</a> لاستخدام حسابك.</p>
+      </div>
+    </aside>
+  </div>
+
+  <!-- Modal (login) -->
+  <div class="modal-backdrop" id="loginModal" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="modalTitle">
+    <div class="modal" role="document" aria-describedby="modalDesc">
+      <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px">
+        <h3 id="modalTitle">المتابعة / تسجيل الدخول</h3>
+        <button class="close-btn" id="closeModal" aria-label="إغلاق">✕</button>
+      </div>
+      <p id="modalDesc" class="muted-small">تابع أو سجّل الدخول باستخدام إحدى الشبكات الاجتماعية التالية:</p>
+
+      <div style="display:flex;flex-direction:column;gap:10px;margin-top:12px">
+        <button class="btn" style="background:#3b5998;color:#fff" id="mFb">متابعة عبر فيسبوك</button>
+        <button class="btn" style="background:#fff;color:#111;border:1px solid rgba(0,0,0,0.06)" id="mGoogle">متابعة عبر قوقل</button>
+        <button class="btn" style="background:linear-gradient(90deg,#00d2ff,#6a5df5);color:#071018" id="mTiktok">متابعة عبر تيك توك</button>
+        <button class="btn" style="background:#5865f2;color:#fff" id="mDiscord">متابعة عبر ديسكورد</button>
+      </div>
+
+      <p class="muted-small" style="margin-top:12px">لن يتم مشاركة بياناتك مع جهات أخرى بدون موافقتك.</p>
+    </div>
+  </div>
+
+<script>
+  // accessibility helpers
+  const modal = document.getElementById('loginModal');
+  const openBtns = [document.getElementById('loginBtn'), document.getElementById('watchBtn'), document.getElementById('openLogin')];
+  const closeBtn = document.getElementById('closeModal');
+
+  function openModal(){
+    modal.style.display = 'flex';
+    modal.setAttribute('aria-hidden','false');
+    // trap focus: focus first button
+    const first = modal.querySelector('button');
+    if(first) first.focus();
+    document.body.style.overflow = 'hidden';
+  }
+  function closeModal(){
+    modal.style.display = 'none';
+    modal.setAttribute('aria-hidden','true');
+    document.body.style.overflow = '';
+    // return focus to loginBtn
+    document.getElementById('loginBtn').focus();
+  }
+
+  openBtns.forEach(b=>{
+    if(!b) return;
+    b.addEventListener('click', (e)=>{
+      e.preventDefault();
+      openModal();
     });
-  </script>
+  });
+  closeBtn.addEventListener('click', closeModal);
+  modal.addEventListener('click', (e)=>{ if(e.target === modal) closeModal(); });
+  document.addEventListener('keydown', (e)=>{ if(e.key==='Escape' && modal.style.display==='flex') closeModal(); });
+
+  // Social buttons behavior: open placeholder links in new window (replace with real oauth endpoints)
+  const socialMap = {
+    mFb: 'https://www.facebook.com/',
+    mGoogle: 'https://accounts.google.com/signin',
+    mTiktok: 'https://www.tiktok.com/login',
+    mDiscord: 'https://discord.com/login',
+    fbBtn: 'https://www.facebook.com/',
+    googleBtn: 'https://accounts.google.com/signin',
+    tiktokBtn: 'https://www.tiktok.com/login',
+    discordBtn: 'https://discord.com/login'
+  };
+
+  Object.keys(socialMap).forEach(id=>{
+    const el = document.getElementById(id);
+    if(!el) return;
+    el.addEventListener('click', (e)=>{
+      e.preventDefault();
+      // open in new window/tab
+      window.open(socialMap[id], '_blank', 'noopener');
+    });
+  });
+
+  // small UX: watch button prompts modal and shows message
+  document.getElementById('watchBtn').addEventListener('click', (e)=>{
+    // login modal opens via handler above; also show side notification
+    // nothing else required here; if user logs in integrate your logic
+  });
+
+  // keyboard accessibility: allow Enter on social tiles in aside
+  document.querySelectorAll('.social').forEach(el=>{
+    el.setAttribute('tabindex','0');
+    el.addEventListener('keydown', (e)=>{ if(e.key === 'Enter' || e.key === ' ') el.click(); });
+  });
+
+  // progressive enhancement: lazy load logo if many assets
+  document.addEventListener('DOMContentLoaded', ()=>{
+    const img = document.querySelector('#logoContainer img');
+    if(img && img.loading !== undefined) img.loading = 'lazy';
+  });
+
+  // small analytics-like local log (keeps in localStorage) - optional
+  function logAction(action){
+    try{
+      const logs = JSON.parse(localStorage.getItem('farmliya_logs')||'[]');
+      logs.unshift({t:new Date().toISOString(),action});
+      localStorage.setItem('farmliya_logs', JSON.stringify(logs.slice(0,100)));
+    }catch(e){}
+  }
+  // attach logs
+  document.getElementById('loginBtn').addEventListener('click', ()=>logAction('open_login_modal'));
+  document.getElementById('watchBtn').addEventListener('click', ()=>logAction('watch_pressed'));
+
+</script>
 </body>
 </html>
