Final integration with DeepSec AI interface (using Telegram API)

--- a/index.html
+++ b/index.html
@@ -1,108 +1,357 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>APP JOJO ♡ JASSER</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
 <style>
-    body {
-        margin: 0;
-        font-family: 'Arial', sans-serif;
-        background: linear-gradient(135deg, #ff99cc, #ff66aa);
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        color: #fff;
-        overflow: hidden;
-    }
+  :root{
+    --bg1: #0f0520;
+    --bg2: #2b004d;
+    --accent: #ff5fb4;
+    --gold: #ffd166;
+    --paper: #fff8f5;
+    --text-dark: #3b2340;
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0;
+    min-height:100vh;
+    font-family: 'Cairo', sans-serif;
+    background: radial-gradient(1000px 600px at 10% 10%, rgba(255,95,180,0.06), transparent),
+                linear-gradient(180deg,var(--bg1),var(--bg2));
+    color:#fff;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    padding:28px 16px;
+  }
 
-    h1 {
-        margin-top: 20px;
-        font-size: 32px;
-        text-align: center;
-        text-shadow: 0 0 10px #fff;
-    }
+  /* العنوان و القلب (مع التاريخ داخل القلب) */
+  .title {
+    text-align:center;
+    margin-bottom:6px;
+  }
+  .title h1{
+    margin:0;
+    font-size:28px;
+    letter-spacing:1px;
+    text-shadow: 0 6px 22px rgba(0,0,0,0.6);
+  }
+  .sub {
+    margin:8px 0 0 0;
+    display:flex;
+    gap:12px;
+    align-items:center;
+    justify-content:center;
+  }
+  .heart {
+    width:68px;height:68px;border-radius:999px;
+    background:linear-gradient(180deg,#ff7ab6,#ff3b90);
+    display:flex;align-items:center;justify-content:center;
+    box-shadow:0 10px 30px rgba(255,59,144,0.12), inset 0 -6px 12px rgba(0,0,0,0.08);
+    font-weight:900;
+    color:white;
+    position:relative;
+  }
+  .heart .date{
+    font-size:11px;font-weight:700;line-height:1;text-align:center;
+  }
 
-    .heart {
-        font-size: 50px;
-        margin-top: 15px;
-    }
+  /* الحاوية الرئيسية للهدية */
+  .stage{
+    width:100%;
+    max-width:520px;
+    margin-top:28px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    position:relative;
+    padding:26px;
+  }
 
-    .date {
-        margin-top: 5px;
-        font-size: 20px;
-    }
+  /* تصميم صندوق الهدية (CSS-only) */
+  .gift {
+    width:240px;
+    height:180px;
+    position:relative;
+    perspective:1200px;
+    cursor:pointer;
+  }
 
-    .gift-container {
-        position: relative;
-        margin-top: 50px;
-        width: 200px;
-        height: 200px;
-        cursor: pointer;
-    }
+  /* قاعدة الصندوق */
+  .box-base {
+    width:100%;
+    height:62%;
+    background: linear-gradient(180deg,#4b002f,#2a001b);
+    border-radius:12px;
+    position:absolute;
+    bottom:0;
+    left:0;
+    box-shadow: 0 18px 40px rgba(2,2,2,0.6);
+    overflow:visible;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    transform-origin: center top;
+    z-index:2;
+  }
+  /* غلاف الشريط */
+  .ribbon-vertical {
+    position:absolute;
+    left:50%;
+    transform:translateX(-50%);
+    width:34px;height:100%;
+    background: linear-gradient(180deg,#ff84c3,#ff4aa3);
+    border-radius:6px;
+    box-shadow: inset 0 -6px 12px rgba(0,0,0,0.12);
+    z-index:3;
+  }
+  .ribbon-horizontal {
+    position:absolute;
+    top:32%;
+    left:0;
+    width:100%;
+    height:30px;
+    background: linear-gradient(90deg,#ff84c3,#ff4aa3);
+    border-radius:6px;
+    z-index:3;
+  }
+  .bow {
+    position:absolute;
+    top: -20px;
+    left:50%;
+    transform:translateX(-50%) rotate(-10deg);
+    width:86px;height:50px;border-radius:18px;
+    background: linear-gradient(180deg,#ffd1e8,#ff86c4);
+    z-index:5;
+    box-shadow: 0 6px 20px rgba(255,91,158,0.18);
+  }
+  .bow:before, .bow:after{
+    content:"";
+    position:absolute;
+    width:30px;height:36px;
+    background:inherit;border-radius:8px;
+    top:6px;
+  }
+  .bow:before{left:6px; transform:rotate(-28deg)}
+  .bow:after{right:6px; transform:rotate(28deg)}
 
-    .gift-box {
-        width: 100%;
-        height: 100%;
-        background: url('https://cdn-icons-png.flaticon.com/512/2541/2541988.png') no-repeat center/contain;
-        transition: transform 0.5s;
-        z-index: 2;
-        position: relative;
-    }
+  /* الغطاء (lid) */
+  .box-lid {
+    width:100%;
+    height:48%;
+    position:absolute;
+    top:0;
+    left:0;
+    border-radius:14px;
+    background: linear-gradient(180deg,#6f0045,#3a001f);
+    transform-origin: top center;
+    z-index:6;
+    transition: transform 700ms cubic-bezier(.2,.95,.15,1);
+    box-shadow: 0 18px 40px rgba(0,0,0,0.4);
+  }
 
-    .gift-paper {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%) rotate(-20deg);
-        width: 150px;
-        padding: 15px;
-        background: #fff;
-        color: #ff3399;
-        font-weight: bold;
-        text-align: center;
-        border-radius: 10px;
-        box-shadow: 0 0 10px #ff66aa;
-        opacity: 0;
-        transition: all 1s ease;
-        z-index: 1;
-    }
+  /* الورقة (الملاحظة) */
+  .note {
+    position:absolute;
+    left:50%;
+    transform:translateX(-50%) translateY(10px) rotate(-6deg);
+    top:34%;
+    width:160px;
+    padding:14px 12px;
+    background: var(--paper);
+    color: var(--text-dark);
+    border-radius:10px;
+    box-shadow: 0 18px 40px rgba(0,0,0,0.3);
+    opacity:0;
+    z-index:1;
+    transform-origin: bottom center;
+    transition: all 900ms cubic-bezier(.2,.9,.2,1);
+    font-weight:700;
+    line-height:1.35;
+    text-align:center;
+  }
+
+  /* تأثير ظهور الورقة بشكل انسيابي */
+  .opened .box-lid{
+    transform: translateY(-20px) rotateX(55deg) scale(1.02);
+  }
+  .opened .note{
+    opacity:1;
+    top:-40%;
+    transform: translateX(-50%) translateY(0) rotate(0deg);
+  }
+
+  /* الرسالة داخل الورقة */
+  .message{
+    font-size:15px;
+    color:#4b2340;
+  }
+  .message .big{
+    display:block;
+    font-size:17px;
+    margin-top:8px;
+    color:#2b1840;
+    font-weight:900;
+  }
+  /* زر إعادة */
+  .controls{
+    margin-top:26px;
+    display:flex;
+    gap:12px;
+    justify-content:center;
+  }
+  .btn{
+    background:transparent;border:1px solid rgba(255,255,255,0.12);
+    color: #fff;padding:8px 14px;border-radius:10px;cursor:pointer;font-weight:700;
+  }
+  .btn:active{transform:translateY(1px)}
+
+  /* confetti small */
+  .confetti{
+    position: absolute; inset:0; pointer-events:none; z-index:40;
+  }
+
+  /* responsive */
+  @media (max-width:420px){
+    .gift{width:190px;height:150px;}
+    .note{width:150px; top:38%}
+    .heart{width:56px;height:56px}
+  }
 </style>
 </head>
 <body>
 
-<h1>APP JOJO ♡ JASSER</h1>
-<div class="heart">❤️</div>
-<div class="date" id="todayDate"></div>
+  <div class="title">
+    <h1>APP JOJO ♡ JASSER</h1>
+    <div class="sub">
+      <div class="heart" aria-hidden="true">
+        <div class="date" id="dateInHeart"></div>
+      </div>
+    </div>
+  </div>
 
-<div class="gift-container" onclick="openGift()">
-    <div class="gift-box" id="giftBox"></div>
-    <div class="gift-paper" id="giftPaper">رسالة حب لجوجو 💌</div>
-</div>
+  <div class="stage">
+    <div class="gift" id="giftCard" title="اضغط لفتح الهدية">
+      <div class="box-lid" aria-hidden="true"></div>
+
+      <div class="box-base" aria-hidden="true">
+        <div class="ribbon-vertical"></div>
+        <div class="ribbon-horizontal"></div>
+        <div class="bow" aria-hidden="true"></div>
+      </div>
+
+      <div class="note" id="noteCard" role="dialog" aria-hidden="true">
+        <!-- رسالة الحب داخل الورقة -->
+        <div class="message">
+          جوجو الغالية،<br>
+          كل يوم معك يصبح أجمل — ضحكتك تملأ روحي دفئًا وأملاً.<br>
+          أنتِ السبب في سعادتي، وقلبي لكِ وحدك.<span class="big">مع كل الحب، جَاسِر ❤</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="controls">
+    <button class="btn" id="openBtn">افتح الهدية</button>
+    <button class="btn" id="resetBtn">إعادة</button>
+  </div>
+
+  <!-- confetti container -->
+  <canvas class="confetti" id="confettiCanvas"></canvas>
 
 <script>
-    // عرض التاريخ اليومي
-    const today = new Date();
-    document.getElementById("todayDate").textContent =
-        "تاريخ اليوم: " + today.toLocaleDateString("ar-DZ", { year: 'numeric', month: 'long', day: 'numeric' });
+  // تاريخ داخل القلب
+  const d = new Date();
+  const dateEl = document.getElementById('dateInHeart');
+  dateEl.textContent = d.toLocaleDateString('ar-DZ', { year:'numeric', month:'long', day:'numeric' });
 
-    // وظيفة فتح الهدية
-    function openGift() {
-        const giftBox = document.getElementById("giftBox");
-        const giftPaper = document.getElementById("giftPaper");
+  // عناصر
+  const gift = document.getElementById('giftCard');
+  const openBtn = document.getElementById('openBtn');
+  const resetBtn = document.getElementById('resetBtn');
+  const note = document.getElementById('noteCard');
 
-        // تكبير الصندوق
-        giftBox.style.transform = "scale(1.5) rotate(-10deg)";
+  let opened = false;
 
-        // بعد قليل تظهر الورقة
-        setTimeout(() => {
-            giftPaper.style.opacity = 1;
-            giftPaper.style.top = "-100px";
-            giftPaper.style.transform = "translateX(-50%) rotate(0deg)";
-        }, 600);
+  function openGift(){
+    if(opened) return;
+    opened = true;
+    gift.classList.add('opened');
+    note.setAttribute('aria-hidden', 'false');
+
+    // حركية صغيرة + مؤثر احتفالي
+    launchConfetti();
+  }
+
+  function resetGift(){
+    opened = false;
+    gift.classList.remove('opened');
+    note.setAttribute('aria-hidden', 'true');
+  }
+
+  // ربط النقرات
+  gift.addEventListener('click', openGift);
+  openBtn.addEventListener('click', openGift);
+  resetBtn.addEventListener('click', resetGift);
+
+  /* -------- بسيط Confetti Canvas (خفيف) -------- */
+  function launchConfetti(){
+    try {
+      const canvas = document.getElementById('confettiCanvas');
+      const ctx = canvas.getContext('2d');
+      let W = canvas.width = window.innerWidth;
+      let H = canvas.height = window.innerHeight;
+      const pieces = [];
+      const colors = ['#ff5fb4','#ffd166','#7afcff','#8b5cf6','#ff8a66'];
+
+      for(let i=0;i<80;i++){
+        pieces.push({
+          x: Math.random()*W,
+          y: Math.random()*H - H*0.3,
+          r: 6 + Math.random()*8,
+          d: Math.random()*40 + 10,
+          color: colors[Math.floor(Math.random()*colors.length)],
+          tilt: Math.random()*10 - 10,
+          tiltAngle: Math.random() * Math.PI
+        });
+      }
+
+      let t = 0;
+      function draw(){
+        ctx.clearRect(0,0,W,H);
+        for(let p of pieces){
+          p.tiltAngle += 0.05;
+          p.y += Math.sin(t/10) + 2 + p.r/8;
+          p.x += Math.sin(t/20);
+          p.tilt = Math.sin(p.tiltAngle) * 15;
+
+          ctx.save();
+          ctx.translate(p.x, p.y);
+          ctx.rotate(p.tilt * Math.PI/180);
+          ctx.fillStyle = p.color;
+          ctx.fillRect(-p.r/2, -p.r/2, p.r, p.r*0.6);
+          ctx.restore();
+        }
+        t++;
+        // stop after some time
+        if(t < 200){
+          requestAnimationFrame(draw);
+        } else {
+          ctx.clearRect(0,0,W,H);
+        }
+      }
+      draw();
+
+      // adjust canvas on resize
+      window.addEventListener('resize', ()=>{ W = canvas.width = window.innerWidth; H = canvas.height = window.innerHeight; });
+    } catch(e){
+      // لا تعمل Confetti في بعض البيئات -> نتجاهل الخطأ
+      console.warn('confetti not supported', e);
     }
+  }
 </script>
 
 </body>
